// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleDate snapshot test1 1`] = `
<DocumentFragment>
  <span
    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
  >
    <time>
      2022年1月1日
    </time>
     公開
  </span>
</DocumentFragment>
`;

exports[`ArticleDate snapshot test2 1`] = `
<DocumentFragment>
  <span
    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
  >
    <time>
      2022年1月1日
    </time>
     公開
  </span>
  <span
    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
  >
     
    <time>
      2022年12月31日
    </time>
     更新
  </span>
</DocumentFragment>
`;
